[tool.poetry]
name = "lucca"
version = "0.1.0"
description = ""
authors = ["Clarice Hatischvili <claricehatischvili@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
opencv-python = "^4.11.0.86"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
